--- a/pom.xml
+++ b/pom.xml
@@ -13,6 +13,19 @@
                     <target>8</target>
                 </configuration>
             </plugin>
+
+
+                <plugin>
+                    <groupId>com.heroku.sdk</groupId>
+                    <artifactId>heroku-maven-plugin</artifactId>
+                    <version>2.0.13</version>
+                    <configuration>
+                        <processTypes>
+                            <web>java $JAVA_OPTS -cp target/classes:target/dependency/* HelloWorld</web>
+                        </processTypes>
+                    </configuration>
+                </plugin>
+
         </plugins>
     </build>
     <dependencies>
@@ -28,11 +41,16 @@
             <version>1.0.0-alpha</version>
         </dependency>
 
+
+
         <dependency>
             <groupId>com.sparkjava</groupId>
             <artifactId>spark-template-handlebars</artifactId>
             <version>2.7.1</version>
         </dependency>
+
+
+
 
     </dependencies>
 
